--- a/38_iframe.html
+++ b/38_iframe.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="html5, tecnologia">
     </head>
     <body>
-        <h1>Futura Desenvolvedora <b>(Gratidão Deus)</b> </h1>
+        <h1>Futura Desenvolvedora(Gratidão Deus)</h1>
 
         <!--<iframe src="https://serfrontend.com" width="100%" height="500" frameborder="0"></iframe> -->
 
